2003-09-25  Bruno Haible  <bruno@clisp.org>

	* modules/version-etc-2: New file, from modules/version-etc with
	modifications.
	* MODULES.html.sh (func_all_modules): Add version-etc-2.

2003-09-25  Simon Josefsson  <jas@extundo.com>
            Bruno Haible  <bruno@clisp.org>

	* modules/getdomainname: New file.
	* modules/xgetdomainname: New file.
	* MODULES.html.sh (func_all_modules): Add getdomainname, xgetdomainname.

2003-09-24  Paul Eggert  <eggert@twinsun.com>

	* README: Document assumptions that 'int' is at least 32 bits
	wide, that integer arithmetic is 2's complement without overflow,
	that there are no holes in integer values, that adding sizes of
	two nonoverlapping objects can't overflow, and that all-bits-zero
	yields scalar zero.  Fix spelling and capitalization typos.

2003-09-24  Simon Josefsson  <jas@extundo.com>

	* modules/xgethostname: Add xgethostname.h.

2003-09-17  Paul Eggert  <eggert@twinsun.com>

	* gnulib-tool: Use "test -h", not "test -L", for portability
	to Solaris 8 /bin/sh.  (This bug is fixed in Solaris 9.)
	(tags_regexp): Remove, since \| doesn't conform to POSIX.
	(sed_extract_prog): Issue s commands one-by-one, rather than
	using \| in one s command.

2003-09-16  Bruno Haible  <bruno@clisp.org>

	* gnulib-tool (func_create_testdir): Warn about duplicated
	dependencies.

2003-09-15  Paul Eggert  <eggert@twinsun.com>

	* modules/argmatch, modules/fatal, modules/obstack,
	modules/xalloc, modules/xgethostname: Sort dependencies by
	importance, not alphabetically.

2003-09-14  Bruno Haible  <bruno@clisp.org>

	* modules/fwriteerror: New file.
	* MODULES.html.sh (func_all_modules): Add fwriteerror.

2003-09-12  Paul Eggert  <eggert@twinsun.com>

	* modules/argmatch, modules/exitfail, modules/fatal, modules/obstack,
	modules/xgethostname, modules/xalloc: Depend on exit.

2003-09-09  Paul Eggert  <eggert@twinsun.com>

	* README: New section: portability guidelines.

2003-09-07  Paul Eggert  <eggert@twinsun.com>
