@@ -1,3 +1,7 @@
+2003-09-27  Paul Eggert  <eggert@twinsun.com>
+
+	* free.c: New file.
+
 2003-09-26  Jim Meyering  <jim@meyering.net>
 
 	* error.c (error_tail): Move some declarations
